2007-05-17    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_init_data): new char-sets document from IANA (maybe no net change, just re-ordered?)
	
2006-12-08    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_init_data): new IANA charset list (three new charsets defined)

2006-05-02    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_init_data): fix typo in IANA website

2005-11-12    <Daddy@C-3PO>

	* t/*.t: stop using deprecated IO::Capture::ErrorMessages

2005-08-31    <Daddy@C-3PO>

	* lib/I18N/Charset.pm (_strip): do not pollute IANA charset list with Unicode::Map charset names

2005-01-29  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): new IANA charset list (only comments changed)

2004-10-25  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data_extra): added aliases for Encode;
	fixed some typos in debug messages

2004-02-10  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): undo bug in IANA's document
	(_init_data_extra): undo our workaround

2004-02-07  Kingpin  <mthurn@verizon.net>

	* t/bug1.t: skip if Encode is not installed

	* lib/I18N/Charset.pm: new IANA document (one alias added)

2004-01-30  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): new IANA document (typos fixed)

2004-01-24  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (_init_data): new IANA document (5 new charsets)

2004-01-15  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (enco_charset_name): BUGFIX: encoding names were not initialized sometimes

2003-03-28  Kingpin  <mthurn@megapipe.net>

	* t/enco.t: new file

	* lib/I18N/Charset.pm (enco_charset_name): new methods for Encode encoding names

2002-10-11  Kingpin  <mthurn@copper.dulles.tasc.com>

	* t/libi.t: use App::Info::Lib::Iconv instead of File::Which

	* lib/I18N/Charset.pm: check iconv version before running it
	(libi_charset_name): load iconv tables not at startup, but only when needed

2002-10-10  Kingpin  <mthurn@copper.dulles.tasc.com>
