@@ -1,7 +1,12 @@
+2007-05-18    <Daddy@C-3PO>
+
+	* lib/I18N/Charset.pm (mib_charset_name): added pod
+
 2007-05-17    <Daddy@C-3PO>
 
 	* lib/I18N/Charset.pm (_init_data): new char-sets document from IANA (maybe no net change, just re-ordered?)
-	
+	(mib_charset_name): added pod
+
 2006-12-08    <Daddy@C-3PO>
 
 	* lib/I18N/Charset.pm (_init_data): new IANA charset list (three new charsets defined)
